--- a/test.html
+++ b/test.html
@@ -2,14 +2,12 @@
 <meta charset="utf-8">
 <head>
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<link rel="stylesheet" type="text/css" href="css/lineGraph.css">
-<script src="javascript/lineGraph.js"></script>
+<link rel="stylesheet" type="text/css" href="css/toggle.css">
+
 </head>
 <body>
-
+  <label class="switchWS"><input type="checkbox" id="togBtnWS"><div class="sliderWS"><!--ADDED HTML --><span class="on">Winter</span><span class="off">Summer</span><!--END--></div></label>
 <!-- load the d3.js library -->
-
-<div class="lineGraph"></div>
 
 
 </body>
