--- a/results.html
+++ b/results.html
@@ -45,15 +45,15 @@
          </div>
       </div>
       <div class="map">
-         <!-- <span>Winter:</span><input type="checkbox" id="myCheck" onclick="myFunction()"> -->
-         <label class="switchWS"><input type="checkbox" id="togBtnWS" onclick="myFunction()"><div class="sliderWS round"><!--ADDED HTML --><span class="on">Winter</span><span class="off">Summer</span><!--END--></div></label>
+         <!-- <span>Winter:</span><input type="checkbox" id="togBtnWS" onclick="boxUpdate()"> -->
+         <label class="switchWS"><input type="checkbox" id="togBtnWS" onclick="boxUpdate()"><div class="sliderWS round"><!--ADDED HTML --><span class="on">Winter</span><span class="off">Summer</span><!--END--></div></label>
 
          <!-- <span id="checker" style="display:none">winter</span> -->
-         <div id="container" style="position: relative; width: 1000px; height: 600px;"></div>
+         <div id="container" style="position: relative; width: 100%; height: 600px;"></div>
          <div class="slidecontainer">
             <input type="range" step="4" min="1896" max="2016" value="2012" class="slider" id="summerSlider">
             <input type="range" steps="4" min="1924" max="2018" value="2012" class="slider" id="winterSlider" style="display:none">
-            <p>Year of olympics: <span id="demo"></span></p>
+            <h2>Year of olympics: <span id="demo"></span></h2>
          </div>
       </div>
       <div class="barChart">
