--- a/results.html
+++ b/results.html
@@ -15,6 +15,8 @@
       <link rel="stylesheet" type="text/css" href="css/bulletChart.css">
       <link rel="stylesheet" type="text/css" href="css/lineGraph.css">
       <script src="javascript/lineGraph.js"></script>
+      <!-- <script src="javascript/updateMap.js"></script> -->
+
       <link rel="stylesheet" type="text/css" href="css/dropdown.css">
       <link rel="stylesheet" type="text/css" href="css/toggle.css">
 
@@ -48,11 +50,11 @@
          <!-- <span>Winter:</span><input type="checkbox" id="togBtnWS" onclick="boxUpdate()"> -->
          <label class="switchWS"><input type="checkbox" id="togBtnWS" onclick="boxUpdate()"><div class="sliderWS round"><!--ADDED HTML --><span class="on">Winter</span><span class="off">Summer</span><!--END--></div></label>
 
-         <!-- <span id="checker" style="display:none">winter</span> -->
+         <span id="checker" style="display:none"></span>
          <div id="container" style="position: relative; width: 100%; height: 600px;"></div>
          <div class="slidecontainer">
-            <input type="range" step="4" min="1896" max="2016" value="2012" class="slider" id="summerSlider">
-            <input type="range" steps="4" min="1924" max="2018" value="2012" class="slider" id="winterSlider" style="display:none">
+            <input type="range"  min="0" max="27" value="26" class="slider" id="summerSlider">
+            <input type="range" min="0" max="23" value="22" class="slider" id="winterSlider" style="display:none">
             <h2>Year of olympics: <span id="demo"></span></h2>
          </div>
       </div>
