--- a/results.html
+++ b/results.html
@@ -22,6 +22,12 @@
 
    </head>
    <body>
+    <!-- <div class="content1">//my blog post</div> -->
+    <!-- <div style="width:100px; height:100px;"> -->
+   <!-- <div style="position:relative; top:0px; left:0px; width:100px; height:100px; opacity:0.3;"><img src="doc/olympicsFlag.jpg" alt=" " /></div> -->
+   <!-- <div style="position:relative; top:0px; left:0px; width:100px; height:100px;"> DIV with no opacity </div> -->
+<!-- </div> -->
+     <!-- <div style="opacity:0.4; background-image:url("doc/olympicsFlag.jpg");"> -->
       <div class="header">
          <div class="navbar">
             <a href="#home">Home</a>
@@ -54,7 +60,7 @@
          <div id="container" style="position: relative; width: 100%; height: 600px;"></div>
          <div class="slidecontainer">
             <input type="range"  min="0" max="27" value="26" class="slider" id="summerSlider">
-            <input type="range" min="0" max="23" value="22" class="slider" id="winterSlider" style="display:none">
+            <input type="range" min="0" max="22" value="21" class="slider" id="winterSlider" style="display:none">
             <h2>Year of olympics: <span id="demo"></span></h2>
          </div>
       </div>
@@ -75,6 +81,9 @@
          </div>
       </div>
       <div class="lineGraph">
+        <!-- <iframe width="420" height="345"
+          src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1">
+        </iframe> -->
          <div class="text">
             <h1>hoi</h1>
          </div>
