--- a/Project/homepage.html
+++ b/Project/homepage.html
@@ -8,29 +8,10 @@
 <link rel="stylesheet" type="text/css" href="css/bulletChart.css">
 </head>
 <body>
-
 <div class="navbar">
   <a href="homepage.html">Home</a>
   <a href="results.html">Results</a>
-  <a href="about.html">about</a>
-  <div class="dropdown">
-    <button class="dropbtn">Dropdown
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <div class="header">
-        <h2>Mega Menu</h2>
-      </div>
-      <div class="row">
-        <div class="column">
-          <h3>Category 1</h3>
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div>
-    </div>
-  </div>
+  <a href="about.html">About</a>
 </div>
 <div id="container">
 		</div>
