--- a/Project/results.html
+++ b/Project/results.html
@@ -22,45 +22,15 @@
 
    </head>
    <body>
-     <!-- background="doc/olympicFlag.png" -->
-     <!-- background="doc/olympicFlag.jpg" -->
-
-
-    <!-- <div class="content1">//my blog post</div> -->
-    <!-- <div style="width:100px; height:100px;"> -->
-   <!-- <div style="position:relative; top:0px; left:0px; width:100px; height:100px; opacity:0.3;"><img src="doc/olympicsFlag.jpg" alt=" " /></div> -->
-   <!-- <div style="position:relative; top:0px; left:0px; width:100px; height:100px;"> DIV with no opacity </div> -->
-<!-- </div> -->
-     <!-- <div style="opacity:0.4; background-image:url("doc/olympicsFlag.jpg");"> -->
       <div class="header">
          <div class="navbar">
            <a href="homepage.html">Home</a>
            <a href="results.html">Results</a>
            <a href="about.html">About</a>
-            <div class="dropdown">
-               <button class="dropbtn">Dropdown
-               <i class="fa fa-caret-down"></i>
-               </button>
-               <div class="dropdown-content">
-                  <div class="header">
-                     <h2>Mega Menu</h2>
-                  </div>
-                  <div class="row">
-                     <div class="column">
-                        <h3>Category 1</h3>
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
-                     </div>
-                  </div>
-               </div>
-            </div>
          </div>
       </div>
       <div class="map">
-         <!-- <span>Winter:</span><input type="checkbox" id="togBtnWS" onclick="boxUpdate()"> -->
          <label class="switchWS"><input type="checkbox" id="togBtnWS" onclick="boxUpdate()"><div class="sliderWS round"><!--ADDED HTML --><span class="on">Winter</span><span class="off">Summer</span><!--END--></div></label>
-
          <span id="checker" style="display:none"></span>
          <div id="container" style="position: relative; width: 100%; height: 600px;"></div>
          <div class="slidecontainer">
@@ -76,7 +46,7 @@
                <a class="m" value="5" href="#">5</a>
                <a class="m" value="7" href="#">7</a>
                <a class="m" value="10" href="#">10</a>
-               <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Neverland</a>
+               <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">?</a>
             </div>
          </div>
          <div id="bestText">
