--- a/Project/homepage.html
+++ b/Project/homepage.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/homepage.css">
 <script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="javascript/bulletChart.js"></script>
-<link rel="stylesheet" type="text/css" href="css/bulletChart.css">
+<!-- <script src="javascript/stackedBarChart.js"></script>
+<link rel="stylesheet" type="text/css" href="css/stackedBarChart.css"> -->
 </head>
 <body>
 <div class="navbar">
