--- a/Project/results.html
+++ b/Project/results.html
@@ -5,14 +5,14 @@
       <!-- <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
       <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
       <script src="javascript/map.js"></script>
-      <script src="javascript/results.js"></script>
+      <script src="javascript/main.js"></script>
       <link rel="stylesheet" type="text/css" href="css/results.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="css/homepage.css">
       <link rel="stylesheet" type="text/css" href="css/slider.css">
       <link rel="stylesheet" type="text/css" href="css/pageMakeUp.css">
-      <script src="javascript/bulletChart.js"></script>
-      <link rel="stylesheet" type="text/css" href="css/bulletChart.css">
+      <script src="javascript/stackedBarChart.js"></script>
+      <link rel="stylesheet" type="text/css" href="css/stackedBarChart.css">
       <link rel="stylesheet" type="text/css" href="css/lineGraph.css">
       <script src="javascript/lineGraph.js"></script>
       <script src="javascript/updateMap.js"></script>
