--- a/Project/results.html
+++ b/Project/results.html
@@ -8,7 +8,7 @@
       <script src="javascript/main.js"></script>
       <link rel="stylesheet" type="text/css" href="css/results.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" type="text/css" href="css/homepage.css">
+      <link rel="stylesheet" type="text/css" href="css/page.css">
       <link rel="stylesheet" type="text/css" href="css/slider.css">
       <link rel="stylesheet" type="text/css" href="css/pageMakeUp.css">
       <script src="javascript/stackedBarChart.js"></script>
