--- a/Project/about.html
+++ b/Project/about.html
@@ -29,6 +29,11 @@
     this was done because the map used does not contain these past country's. And who cares about the past?
     (also it would have taken me a enourmous amount of time to process all the data into subdata).</h3></div>
 
+    <div class="title"><h1> Relative line </h1></div>
+    <div class ="text"><h3> when a block of the stacked bar chart is hovered, a dotted line showning the Olympic
+    history of that country is shown in the linegraph. this line is relative and not absolute to the orginal line.
+    this is done because it is more intresting to see how two country's behaved relative to one another than absolute.</h3></div>
+    
     <div class="title"><h1> Credits </h1></div>
     <div class ="text"><h3> Creator: David Vesseur</h3></div>
     <div class ="text"><h3> Assistance: Jan Jetze Beitler, Sascha van Essen, Tim Meijer, Laura Ruis. </h3></div>
