--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
         </h2>
     </head>
     <body>
-
-        <a href="results.html"> main page</a>
-
-
-
+        <a href="Project/homepage.html"> project</a>
     </body>
 </html>
-
-/results.html
