--- a/Project/homepage.html
+++ b/Project/homepage.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="css/page.css">
-<link rel="stylesheet" type="text/css" href="css/homePage.css">
-<script src="https://d3js.org/d3.v3.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/page.css" rel="stylesheet" type="text/css">
+	<link href="css/homePage.css" rel="stylesheet" type="text/css">
+	<script src="https://d3js.org/d3.v3.min.js">
+	</script>
 </head>
 <body>
-<div class="navbar">
-  <a href="homepage.html">Home</a>
-  <a href="results.html">Results</a>
-  <a href="about.html">About</a>
-</div>
-<div id="container">
-		</div>
-  <div class="title"><h1> Homepage </h1></div>
-  <div class ="text"><h3> Since it is 2018 the winter Olympics are coming up, of
-     course a lot of people are excited for the games and are curious how their
-     nation will do, but how did YOUR nation do in the past compared to other
-     nations in the past? Did it dominate the others to show it's athletic supiority or did it
-     fail to do so. Or is your nation a up and comming nation starting to spread it's
-     wings?
-     On this visual website the answer to these question are displayed and ready to be
-     discoverd by you: the user. find out if your nation is a force to be reckoned with,
-     starting to spread it's wings, slowly falling in decay or simpely always sucked and
-     alway will suck. Explore this for both the summer and the winter Olympics
-     along with the history of every modern nation </h3></div>
-  <div class="image"> <img src="doc/usainBolt.jpg"></div>
+	<div class="navbar">
+		<a href="homepage.html">Home</a> <a href="results.html">Results</a> <a href="about.html">About</a>
+	</div>
+	<div id="container"></div>
+	<div class="title">
+		<h1>Homepage</h1>
+	</div>
+	<div class="text">
+		<h3>Since it is 2018 the winter Olympics are coming up, of course a lot of people are excited for the games and are curious how their nation will do, but how did YOUR nation do in the past compared to other nations in the past? Did it dominate the others to show it's athletic supiority or did it fail to do so. Or is your nation a up and comming nation starting to spread it's wings? On this visual website the answer to these question are displayed and ready to be discoverd by you: the user. find out if your nation is a force to be reckoned with, starting to spread it's wings, slowly falling in decay or simpely always sucked and alway will suck. Explore this for both the summer and the winter Olympics along with the history of every modern nation</h3>
+	</div>
+	<div class="image"><img src="doc/usainBolt.jpg"></div>
 </body>
 </html>
