--- a/Project/about.html
+++ b/Project/about.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="css/page.css">
-<script src="https://d3js.org/d3.v3.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/page.css" rel="stylesheet" type="text/css">
+	<script src="https://d3js.org/d3.v3.min.js">
+	</script>
 </head>
 <body>
-  <iframe width="420" height="345" style="display:none"
-    src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1">
-  </iframe>
-
-<div class="navbar">
-  <a href="homepage.html">Home</a>
-  <a href="results.html">Results</a>
-  <a href="about.html">About</a>
-</div>
-<div id="container">
-		</div>
-    <div class="title"><h1> Rating </h1></div>
-    <div class ="text"><h3> The map is colored based on the prefomances of country's in the olympics.
-    Ofcourse a Gold medal is more valueble than a Silver of Bronze medal, therefor every
-    country is given a score based on these medals. A Gold medal holds a value of 3, Silver has 2 and Bronze 1
-    when these values are added a total score is calculated and the country's receve a medal acording to this score</h3></div>
-
-    <div class="title"><h1> Modern nations </h1></div>
-    <div class ="text"><h3> In the map only the modern teams are shown, teams
-    comming from the sovietunion or mix country teams are not shown in the map,
-    this was done because the map used does not contain these past country's. And who cares about the past?
-    (also it would have taken me a enourmous amount of time to process all the data into subdata).</h3></div>
-
-    <div class="title"><h1> Relative line </h1></div>
-    <div class ="text"><h3> when a block of the stacked bar chart is hovered, a dotted line showning the Olympic
-    history of that country is shown in the linegraph. this line is relative and not absolute to the orginal line.
-    this is done because it is more intresting to see how two country's behaved relative to one another than absolute.</h3></div>
-    
-    <div class="title"><h1> Credits </h1></div>
-    <div class ="text"><h3> Creator: David Vesseur</h3></div>
-    <div class ="text"><h3> Assistance: Jan Jetze Beitler, Sascha van Essen, Tim Meijer, Laura Ruis. </h3></div>
-    <div class ="text"><h3> General acknowledgements: The whole Minor Programeren Team at the UVA (Semseter 1, Studie year 2017/2018)</h3></div>
-
-
-
+	<iframe height="345" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" style="display:none" width="420"></iframe>
+	<div class="navbar">
+		<a href="homepage.html">Home</a> <a href="results.html">Results</a> <a href="about.html">About</a>
+	</div>
+	<div id="container"></div>
+	<div class="title">
+		<h1>Rating</h1>
+	</div>
+	<div class="text">
+		<h3>The map is colored based on the prefomances of country's in the olympics. Ofcourse a Gold medal is more valueble than a Silver of Bronze medal, therefor every country is given a score based on these medals. A Gold medal holds a value of 3, Silver has 2 and Bronze 1 when these values are added a total score is calculated and the country's receve a medal acording to this score</h3>
+	</div>
+	<div class="title">
+		<h1>Modern nations</h1>
+	</div>
+	<div class="text">
+		<h3>In the map only the modern teams are shown, teams comming from the sovietunion or mix country teams are not shown in the map, this was done because the map used does not contain these past country's. And who cares about the past? (also it would have taken me a enourmous amount of time to process all the data into subdata).</h3>
+	</div>
+	<div class="title">
+		<h1>Relative line</h1>
+	</div>
+	<div class="text">
+		<h3>when a block of the stacked bar chart is hovered, a dotted line showning the Olympic history of that country is shown in the linegraph. this line is relative and not absolute to the orginal line. this is done because it is more intresting to see how two country's behaved relative to one another than absolute.</h3>
+	</div>
+	<div class="title">
+		<h1>Credits</h1>
+	</div>
+	<div class="text">
+		<h3>Creator: David Vesseur</h3>
+	</div>
+	<div class="text">
+		<h3>Assistance: Jan Jetze Beitler, Sascha van Essen, Tim Meijer, Laura Ruis.</h3>
+	</div>
+	<div class="text">
+		<h3>General acknowledgements: The whole Minor Programeren Team at the UVA (Semseter 1, Studie year 2017/2018)</h3>
+	</div>
 </body>
 </html>
