--- a/Project/results.html
+++ b/Project/results.html
@@ -1,71 +1,65 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <script src="https://d3js.org/d3.v3.min.js"></script>
-      <!-- <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
-      <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
-      <script src="javascript/map.js"></script>
-      <script src="javascript/main.js"></script>
-      <link rel="stylesheet" type="text/css" href="css/results.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" type="text/css" href="css/page.css">
-      <link rel="stylesheet" type="text/css" href="css/slider.css">
-      <link rel="stylesheet" type="text/css" href="css/pageMakeUp.css">
-      <script src="javascript/stackedBarChart.js"></script>
-      <link rel="stylesheet" type="text/css" href="css/stackedBarChart.css">
-      <link rel="stylesheet" type="text/css" href="css/lineGraph.css">
-      <script src="javascript/lineGraph.js"></script>
-      <script src="javascript/updateMap.js"></script>
+<head>
 
-      <link rel="stylesheet" type="text/css" href="css/dropdown.css">
-      <link rel="stylesheet" type="text/css" href="css/toggle.css">
-
-   </head>
-   <body>
-      <div class="header">
-         <div class="navbar">
-           <a href="homepage.html">Home</a>
-           <a href="results.html">Results</a>
-           <a href="about.html">About</a>
-         </div>
-      </div>
-      <div class="map">
-         <label class="switchWS"><input type="checkbox" id="togBtnWS" onclick="boxUpdate()"><div class="sliderWS round"><!--ADDED HTML --><span class="on">Winter</span><span class="off">Summer</span><!--END--></div></label>
-         <span id="checker" style="display:none"></span>
-         <div id="container" style="position: relative; width: 100%; height: 600px;"></div>
-         <div class="slidecontainer">
-            <input type="range"  min="0" max="27" value="26" class="slider" id="summerSlider">
-            <input type="range" min="0" max="22" value="21" class="slider" id="winterSlider" style="display:none">
-            <h2>Year of olympics: <span id="demo"></span></h2>
-         </div>
-      </div>
-      <div class="barChart">
-         <div class="dropdown1">
-            <button onclick="dropdownFunction()" class="dropbtn1">Top country's</button>
-            <div id="myDropdown1" class="dropdown-content1">
-               <a class="m" value="5" href="#">5</a>
-               <a class="m" value="7" href="#">7</a>
-               <a class="m" value="10" href="#">10</a>
-               <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">?</a>
-            </div>
-         </div>
-         <div id="bestText">
-            <h1>Best country's (based on gold medals)</h1>
-         </div>
-         <div id="barChart2" class="barChart2">
-         </div>
-      </div>
-      <div class="lineGraph">
-        <!-- <iframe width="420" height="345"
-          src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1">
-        </iframe> -->
-         <div class="text">
-            <h1>Olympic history of United States</h1>
-         </div>
-         <div class="graph"></div>
-      </div>
-      <!-- <span>Winter:</span><input type="checkbox" id="myCheck" onclick="myFunction()">
-         <span id="checker" style="display:none">winter</span> -->
-      <!-- <div id="container" style="position: relative; width: 1000px; height: 600px;"></div> -->
-   </body>
+	<script src="https://d3js.org/d3.v3.min.js">
+	</script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js">
+	</script>
+	<script src="javascript/map.js">
+	</script>
+	<script src="javascript/main.js">
+	</script>
+	<link href="css/results.css" rel="stylesheet" type="text/css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/page.css" rel="stylesheet" type="text/css">
+	<link href="css/slider.css" rel="stylesheet" type="text/css">
+	<link href="css/pageMakeUp.css" rel="stylesheet" type="text/css">
+	<script src="javascript/stackedBarChart.js">
+	</script>
+	<link href="css/stackedBarChart.css" rel="stylesheet" type="text/css">
+	<link href="css/lineGraph.css" rel="stylesheet" type="text/css">
+	<script src="javascript/lineGraph.js">
+	</script>
+	<script src="javascript/updateMap.js">
+	</script>
+	<link href="css/dropdown.css" rel="stylesheet" type="text/css">
+	<link href="css/toggle.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+	<div class="header">
+		<div class="navbar">
+			<a href="homepage.html">Home</a> <a href="results.html">Results</a> <a href="about.html">About</a>
+		</div>
+	</div>
+	<div class="map">
+		<label class="switchWS"><input id="togBtnWS" onclick="boxUpdate()" type="checkbox"></label>
+		<div class="sliderWS round">
+			<label class="switchWS"><!--ADDED HTML --><span class="on">Winter</span><span class="off">Summer</span><!--END--></label>
+		</div><span id="checker" style="display:none"></span>
+		<div id="container" style="position: relative; width: 100%; height: 600px;"></div>
+		<div class="slidecontainer">
+			<input class="slider" id="summerSlider" max="27" min="0" type="range" value="26"> <input class="slider" id="winterSlider" max="22" min="0" style="display:none" type="range" value="21">
+			<h2>Year of olympics: <span id="demo"></span></h2>
+		</div>
+	</div>
+	<div class="barChart">
+		<div class="dropdown1">
+			<button class="dropbtn1" onclick="dropdownFunction()">Top country's</button>
+			<div class="dropdown-content1" id="myDropdown1">
+				<a class="m" href="#">5</a> <a class="m" href="#">7</a> <a class="m" href="#">10</a> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">?</a>
+			</div>
+		</div>
+		<div id="bestText">
+			<h1>Best country's (based on gold medals)</h1>
+		</div>
+		<div class="barChart2" id="barChart2"></div>
+	</div>
+	<div class="lineGraph">
+		<div class="text">
+			<h1>Olympic history of United States</h1>
+		</div>
+		<div class="graph"></div>
+	</div>
+</body>
 </html>
