--- a/Project/results.html
+++ b/Project/results.html
@@ -27,39 +27,50 @@
 	<link href="css/toggle.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div class="header">
-		<div class="navbar">
-			<a href="homepage.html">Home</a> <a href="results.html">Results</a> <a href="about.html">About</a>
+		<div class="header">
+			 <div class="navbar">
+				 <a href="homepage.html">Home</a>
+				 <a href="results.html">Results</a>
+				 <a href="about.html">About</a>
+			 </div>
 		</div>
-	</div>
-
-	<div class="map">
-		 <label class="switchWS"><input type="checkbox" id="togBtnWS" onclick="boxUpdate()"><div class="sliderWS round"><!--ADDED HTML --><span class="on">Winter</span><span class="off">Summer</span><!--END--></div></label>
-		 <span id="checker" style="display:none"></span>
-		 <div id="container" style="position: relative; width: 100%; height: 600px;"></div>
-		 <div class="slidecontainer">
-				<input type="range"  min="0" max="27" value="26" class="slider" id="summerSlider">
-				<input type="range" min="0" max="22" value="21" class="slider" id="winterSlider" style="display:none">
-				<h2>Year of olympics: <span id="demo"></span></h2>
-		 </div>
-	</div>
-	<div class="barChart">
-		<div class="dropdown1">
-			<button class="dropbtn1" onclick="dropdownFunction()">Top country's</button>
-			<div class="dropdown-content1" id="myDropdown1">
-				<a class="m" href="#">5</a> <a class="m" href="#">7</a> <a class="m" href="#">10</a> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">?</a>
-			</div>
+		<div class="map">
+			 <label class="switchWS"><input type="checkbox" id="togBtnWS" onclick="boxUpdate()"><div class="sliderWS round"><!--ADDED HTML --><span class="on">Winter</span><span class="off">Summer</span><!--END--></div></label>
+			 <span id="checker" style="display:none"></span>
+			 <div id="container" style="position: relative; width: 100%; height: 600px;"></div>
+			 <div class="slidecontainer">
+					<input type="range"  min="0" max="27" value="26" class="slider" id="summerSlider">
+					<input type="range" min="0" max="22" value="21" class="slider" id="winterSlider" style="display:none">
+					<h2>Year of olympics: <span id="demo"></span></h2>
+			 </div>
 		</div>
-		<div id="bestText">
-			<h1>Best country's (based on gold medals)</h1>
+		<div class="barChart">
+			 <div class="dropdown1">
+					<button onclick="dropdownFunction()" class="dropbtn1">Top country's</button>
+					<div id="myDropdown1" class="dropdown-content1">
+						 <a class="m" value="5" href="#">5</a>
+						 <a class="m" value="7" href="#">7</a>
+						 <a class="m" value="10" href="#">10</a>
+						 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">?</a>
+					</div>
+			 </div>
+			 <div id="bestText">
+					<h1>Best country's (based on gold medals)</h1>
+			 </div>
+			 <div id="barChart2" class="barChart2">
+			 </div>
 		</div>
-		<div class="barChart2" id="barChart2"></div>
-	</div>
-	<div class="lineGraph">
-		<div class="text">
-			<h1>Olympic history of United States</h1>
+		<div class="lineGraph">
+			<!-- <iframe width="420" height="345"
+				src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1">
+			</iframe> -->
+			 <div class="text">
+					<h1>Olympic history of United States</h1>
+			 </div>
+			 <div class="graph"></div>
 		</div>
-		<div class="graph"></div>
-	</div>
-</body>
+		<!-- <span>Winter:</span><input type="checkbox" id="myCheck" onclick="myFunction()">
+			 <span id="checker" style="display:none">winter</span> -->
+		<!-- <div id="container" style="position: relative; width: 1000px; height: 600px;"></div> -->
+ </body>
 </html>
